pkginclude_HEADERS = \
chapterlist.h \
compression.h \
connectors.h \
edl.h \
gavf.h \
gavl.h \
gavltime.h \
gavl_version.h \
gavldsp.h \
hw.h \
hw_vaapi.h \
hw_vaapi_x11.h \
keycodes.h \
numptr.h \
timecode.h \
trackinfo.h \
gavldefs.h \
metadata.h \
metatags.h \
msg.h \
peakdetector.h \
utils.h \
value.h


EXTRA_DIST = gavl_version.h.in
